# MetaPytorch-Hackathon-3

./: .gitignore  Dockerfile  README.md  __init__.py  baseline_inference_groq.py  client.py  err.txt  err_push.txt  err_push_f.txt  err_py.txt  inference.py  inference_groq.py  models.py  openenv.yaml  openenv_http_server.py  out.json  ports.txt  push_hf_err.txt  push_origin_err.txt  pyproject.toml
openenv_sql_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  environment.py  requirements.txt
